--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -64,3 +64,33 @@
 .map-dot-default {
   fill: #99BC85;
 }
+
+.map-dot-active {
+  fill: #457b9d;
+}
+
+.liquid-glass {
+  position: absolute;
+  z-index: 0;
+  inset: 0;
+  backdrop-filter: blur(3px);
+  filter: url(#glass-distortion);
+  overflow: hidden;
+  isolation: isolate;
+
+  &-tint {
+    z-index: 1;
+    position: absolute;
+    inset: 0;
+    background: rgba(255, 255, 255, 0.25);
+  }
+
+  &-shine {
+    position: absolute;
+    inset: 0;
+    z-index: 2;
+    overflow: hidden;
+    box-shadow: inset 3px 3px 2px 0 rgba(255, 255, 255, 0.5),
+      inset -2px -2px 2px 2px rgba(255, 255, 255, 0.5);
+  }
+}
